# freetunnel

./: .clang-tidy  .codacy.yml  .gitignore  AUDIT.md  CMakeLists.txt  CONTRIBUTING.md  DEEP_LINK.md  DESIGN.md  Makefile  README.md  SECURITY.md  cppcheck-suppressions.txt  cppcheck.cfg  main.cpp  qml.qrc
.github/: action-pins.env  dependabot.yml
.github/workflows/: build-http3.yml  build.yml  regenerate-icons.yml  security.yml  tests.yml
assets/: app.qrc  logo.icns
cmake/: FreetunnelDeps.cmake
docs/: security-threats.md
i18n/: freetunnel_ru.qm  freetunnel_ru.ts  i18n.qrc
include/app/: AppStartup.h  Backend.h  LogModel.h  MacWindow.h  PlatformAutoStart.h
include/core/: AppSettings.h  AppUiUtils.h  BypassRules.h  ConfigImport.h  ConfigPaths.h  ConfigStore.h  ConfigToml.h  ControlCommand.h  CredentialStore.h  CredentialStoreLibsecret.h  DeepLink.h  InstanceControl.h  NetBind.h  NetworkAdapterManager.h  ReleaseSigning.h  ReleaseVerify.h  UpdateChecker.h  VersionCompare.h
include/vpn/: qt_trusttunnel_client.h  socks_vpn_client.h  vpn_client.h  vpn_helper_client.h  vpn_helper_launch.h  vpn_helper_protocol.h  vpn_helper_server.h
macos/: Info.plist.in
qml/: CreateConfigOverlay.qml  Field.qml  Main.qml  Toggle.qml
qml/components/: ChipX.qml  ConfirmDialog.qml  Dropdown.qml  HotkeyField.qml  Icon.qml  SectionLabel.qml  Sep.qml
qml/pages/: ConfigsPage.qml  HomePage.qml  LogsPage.qml  SettingsPage.qml  SplitPage.qml
scripts/: check-pinned-deps.sh  coverage-report.sh  coverage-upstream-report.sh  export-patched-boringssl.sh  gen-release-signing-key.sh  i18n-update.sh  i18n-verify.sh  patch_core_wrapper.py  render-icons.sh  run-clang-tidy.sh  run-ctest-keyring.sh  run-ctest.sh  setup-upstream-tree.sh  upstream_ref.txt  verify_upstream_patch.sh
src/app/: AppGuiMain.cpp  AppStartup.cpp  Backend.cpp  BackendConfig.cpp  BackendConfigCreate.cpp  BackendConfigImport.cpp  BackendConfigShared.cpp  BackendConfigShared.h  BackendHotkeys.cpp  BackendLogs.cpp  BackendSettings.cpp  BackendSplit.cpp  BackendUpdates.cpp  LogModel.cpp  MacWindow.mm  PlatformAutoStart.cpp
src/core/: AppSettings.cpp  AppUiUtils.cpp  BypassRules.cpp  ConfigImport.cpp  ConfigPaths.cpp  ConfigStore.cpp  ConfigToml.cpp  ControlCommand.cpp  CredentialStore.cpp  CredentialStoreLibsecret.cpp  DeepLink.cpp  InstanceControl.cpp  NetBind.cpp  NetworkAdapterManager.cpp  ReleaseVerify.cpp  UpdateChecker.cpp  VersionCompare.cpp
src/ui/: MainWindow.cpp  SettingsDialog.cpp
src/vpn/: qt_trusttunnel_client.cpp  qt_trusttunnel_connect.cpp  qt_trusttunnel_events.cpp  qt_trusttunnel_events.h  qt_trusttunnel_fdwatch.cpp  qt_trusttunnel_platform.cpp  qt_trusttunnel_platform.h  socks_vpn_client.cpp  vpn_helper_client.cpp  vpn_helper_launch.cpp  vpn_helper_server.cpp
tests/: CMakeLists.txt  helper_ipc_mock_server.cpp  helper_ipc_mock_server.h  mock_http_server.cpp  mock_http_server.h  test_app_startup.cpp  test_appsettings.cpp  test_appuiutils.cpp  test_backend_deeplink_import.cpp  test_configimport.cpp  test_configpaths.cpp  test_configstore.cpp  test_configtoml.cpp  test_control.cpp  test_credentialstore.cpp  test_deeplink.cpp  test_helper_ipc.cpp  test_helper_ipc_fuzz.cpp  test_instance_control.cpp  test_integration_backend_vpn.cpp  test_integration_config_workflow.cpp  test_integration_helper_client.cpp  test_integration_single_instance.cpp  test_logmodel.cpp  test_netbind.cpp  test_qml_ui.cpp  test_qt_trusttunnel_client.cpp  test_releaseverify.cpp  test_safe_fileread.cpp  test_update_checker_e2e.cpp  test_versioncompare.cpp  test_vpn_helper_launch.cpp  tests.pro
tests/mock_core/: mock_core_controller.h
tests/mock_core/net/: network_manager.h  os_tunnel.h  tls.h
tests/mock_core/toml++/: toml.h
tests/mock_core/vpn/: vpn.h
tests/mock_core/vpn/trusttunnel/: auto_network_monitor.h  client.h  config.h
tests/ui/: MockBackend.cpp  MockBackend.h  MockShell.cpp  MockShell.h  UiTheme.cpp  UiTheme.h
tools/qml_preview/: CMakeLists.txt  MockBackend.h  main.cpp  preview.qrc  render-home.sh
win/: installer.nsi
